# py_win_sec_auditor

./: README.md  setup.cfg
src/pkg/: run_powershell_script.py  winsec_audit.py  winsec_auditor.py
src/pkg/ps/: WinSecAudit_v1.ps1  WinSecAudit_v2.ps1
