[metadata]
name = py_win_sec_auditor
version = 0.0.1
author = Kevin J Houston
author_email = kevinjhouston@gmail.com
description = Python Windows Security Auditor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codologist-kj/winsec_auditor
project_urls =
    Bug Tracker = https://github.com/codologist/winsec-auditor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src